# CrackedGlass

./: .gitignore  CMakeLists.txt  Halation.jucer  LICENSE  README.md  crackedGlass.jucer
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
Source/Data/: AdsrData.cpp  AdsrData.h  DistortionData.cpp  DistortionData.h  FilterData.cpp  FilterData.h  OscData.cpp  OscData.h
Source/UI/: AdsrComponent.cpp  AdsrComponent.h  AdsrGraphComponent.cpp  AdsrGraphComponent.h  DistortionComponent.h  FilterComponent.cpp  HeaderComponent.cpp  OscComponent.h
Source/UI/Appearance/: CrackedGlassLookAndFeel.cpp  CrackedGlassLookAndFeel.h  HalationLookAndFeel.cpp  HalationLookAndFeel.h
Source/UI/Modules/: AdsrComponent.cpp  AdsrComponent.h  DistortionComponent.cpp  DistortionComponent.h  FilterComponent.cpp  FilterComponent.h  HeaderComponent.cpp  HeaderComponent.h  OscComponent.cpp  OscComponent.h  SynthModule.cpp  SynthModule.h
Source/UI/Modules/Components/: LabeledRotarySlider.cpp  LabeledRotarySlider.h  RadioButton.cpp  RadioButton.h  RadioButtonGroup.cpp  RadioButtonGroup.h  RadioButtonGroupAttachment.cpp  RadioButtonGroupAttachment.h
